# zounds-rs

./: Cargo.toml  wasmbuild
src/: bindable.rs  buffer_copy.rs  buffer_copy.wgsl  debug_buffer.rs  dimensions.rs  directions.rs  life.rs  life.wgsl  main.rs  renderer.rs  renderer.wgsl  window.rs
