[package]
name = "zounds"
version = "0.1.0"
authors = ["Blake Jones <blakej@foo.net>"]
edition = "2018"
resolver = "2"

# ------------------------------------------------------------------------

[dependencies]
bytemuck = { version = "1.4", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18"
futures = "0.3"
log = "0.4"
rand = { version = "0.7.2", features = ["wasm-bindgen", "small_rng"] }
# wgpu = { version = "0.8.0", features = ["trace"] } # XXX 0.9.0 fails
winit = { version = "0.24", features = ["web-sys"] }

[dependencies.wgpu]
# path = "../../other/wgpu/wgpu"
git = "https://github.com/gfx-rs/wgpu"
version = "0.10"
# rev = "f0520f8c5416362f291a3e5a3cbc547918d2b98d" # 2021-08-12
# rev = "11d31d537706f69b982465840a25244e469f471a" # 2021-08-01
# rev = "6cfe8bdb28e12f600e4660b627a938e1047c8656" # 2021-07-25
# rev = "22139c6a46c3e3a2ecdc0110933355e08c356e7f" # 2021-07-16
# features = ["trace"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.0"
pollster = "0.2"
env_logger = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.50"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
wasm-bindgen = "0.2.73"
wasm-bindgen-futures = "0.4.23"
web-sys = { version = "=0.3.51", features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "Node",
    "Window",
]}
